add distributed tracing & make api requests async

--- a/package.json
+++ b/package.json
@@ -20,23 +20,36 @@
     "deploy": "sectionctl deploy",
     "production": "cross-env NODE_ENV=production fastify start -l info dist/app.js -p 8080",
     "build:ts": "tsc",
-    "dev": "tsc && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"fastify start --ignore-watch=.ts$ -p 8080 -w -l info -P dist/app.js\""
+    "dev": "tsc && concurrently -k -p \"[{name}]\" -n \"search.emu.sh\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"fastify start --ignore-watch=.ts$ -p 8080 -w -l info -P dist/app.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@autotelic/fastify-opentelemetry": "^0.17.0",
+    "@fastify/autoload": "^5.4.1",
+    "@fastify/sensible": "^5.1.1",
+    "@fastify/static": "^6.5.0",
     "@google-cloud/language": "^4.2.6",
+    "@opentelemetry/api": "^1.2.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.33.0",
+    "@opentelemetry/exporter-collector": "^0.25.0",
+    "@opentelemetry/exporter-jaeger": "^1.7.0",
+    "@opentelemetry/instrumentation": "^0.33.0",
+    "@opentelemetry/instrumentation-fastify": "^0.30.0",
+    "@opentelemetry/instrumentation-http": "^0.33.0",
+    "@opentelemetry/resources": "^1.7.0",
+    "@opentelemetry/sdk-node": "^0.33.0",
+    "@opentelemetry/sdk-trace-base": "^1.7.0",
+    "@opentelemetry/sdk-trace-node": "^1.7.0",
+    "@opentelemetry/semantic-conventions": "^1.7.0",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "dohjs": "^0.3.2",
-    "fastify": "^3.0.0",
-    "fastify-autoload": "^3.3.1",
-    "fastify-cli": "^2.13.0",
-    "fastify-http-proxy": "^6.0.0",
-    "fastify-plugin": "^3.0.0",
-    "fastify-sensible": "^3.1.0",
-    "fastify-static": "^4.2.2",
+    "fastify": "^4.9.2",
+    "fastify-cli": "^5.5.1",
+    "fastify-http-proxy": "^6.3.0",
+    "fastify-plugin": "^4.3.0",
     "maxmind": "^4.3.2",
     "node-cache": "^5.1.2",
     "node-dig-dns": "^0.3.0",
