--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./node_modules/fastify-tsconfig/tsconfig.json",
   "compilerOptions": {
-    "lib": ["es2020", "dom"],
+    "lib": ["esnext", "dom"],
     "module": "commonjs",
     "outDir": "dist",
     "target": "es2020",
