--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "fastify-cli": "^5.5.1",
     "fastify-http-proxy": "^6.3.0",
     "fastify-plugin": "^4.3.0",
+    "fastify-racing": "^1.1.0",
     "maxmind": "^4.3.2",
     "node-cache": "^5.1.2",
     "node-dig-dns": "^0.3.0",
