update dockerfile and fix crypto prices

--- a/tracing/docker-compose.yaml
+++ b/tracing/docker-compose.yaml
@@ -19,3 +19,8 @@ services:
     image: openzipkin/zipkin:latest
     ports:
       - '9412:9411'
+  search:
+    image: ghcr.io/askalice/search.emu.sh:master
+    restart: always
+    ports:
+      - '3006:8080'
