--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,18 @@
 {
-  "extends": "./node_modules/fastify-tsconfig/tsconfig.json",
   "compilerOptions": {
+    "moduleResolution": "node",
+    "declaration": true,
+    "pretty": true,
+    "noEmitOnError": true,
+    "resolveJsonModule": true,
+    "removeComments": true,
+    "newLine": "lf",
+    "noFallthroughCasesInSwitch": true,
+    "useDefineForClassFields": true,
     "lib": ["esnext", "dom"],
     "module": "commonjs",
     "outDir": "dist",
+    "rootDir": "src",
     "target": "es2020",
     "noImplicitAny": false,
     "noUnusedLocals": false,
