--- a/package.json
+++ b/package.json
@@ -8,33 +8,50 @@
   },
   "scripts": {
     "test": "npm run build:ts && tsc -p test/tsconfig.test.json && cross-env TS_NODE_FILES=true tap --ts test/**/*.test.ts",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
+    "start": "npm run build:ts && fastify start -l info dist/main.js",
     "predeploy": "npm run build:ts",
     "production": "cross-env NODE_ENV=production fastify start -l info dist/app.js -p 8080",
     "build:ts": "tsc",
-    "dev": "tsc && concurrently -k -p \"[{name}]\" -n \"search.emu.sh\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"fastify start --ignore-watch=.ts$ -p 3006 -w -l info -P dist/app.js\""
+    "dev:ts": "tsc -w",
+    "dev:node": "npx dotenv-cli -e .env -- npx nodemon --watch 'dist/**/*.js' --exec 'node dist/main.js'",
+    "development": "concurrently \"npm:dev:ts\" \"npm:dev:node\"",
+    "devold": "tsc && concurrently -k -p \"[{name}]\" -n \"search.emu.sh\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"fastify start --ignore-watch=.ts$ -p 3006 -w -l info -P dist/app.js\"",
+    "dev": "tsc && concurrently -k \"npm:dev:*\" "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@autotelic/fastify-opentelemetry": "^0.17.1",
+    "@bufbuild/protobuf": "^1.3.0",
+    "@bufbuild/protoc-gen-es": "^1.3.0",
     "@fastify/autoload": "^5.4.1",
     "@fastify/sensible": "^5.1.1",
     "@fastify/static": "^6.5.0",
     "@google-cloud/language": "^4.2.6",
-    "@opentelemetry/api": "^1.3.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.34.0",
-    "@opentelemetry/exporter-collector": "^0.25.0",
-    "@opentelemetry/exporter-jaeger": "^1.8.0",
-    "@opentelemetry/instrumentation": "^0.34.0",
-    "@opentelemetry/instrumentation-fastify": "^0.30.1",
-    "@opentelemetry/instrumentation-http": "^0.34.0",
-    "@opentelemetry/resources": "^1.8.0",
-    "@opentelemetry/sdk-node": "^0.34.0",
-    "@opentelemetry/sdk-trace-base": "^1.8.0",
-    "@opentelemetry/sdk-trace-node": "^1.8.0",
-    "@opentelemetry/semantic-conventions": "^1.8.0",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.38.0",
+    "@opentelemetry/context-async-hooks": "^1.14.0",
+    "@opentelemetry/exporter-collector-grpc": "^0.25.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.40.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.40.0",
+    "@opentelemetry/exporter-prometheus": "^0.40.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.40.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.40.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.40.0",
+    "@opentelemetry/instrumentation": "^0.40.0",
+    "@opentelemetry/instrumentation-dns": "^0.32.0",
+    "@opentelemetry/instrumentation-fastify": "^0.32.0",
+    "@opentelemetry/instrumentation-http": "^0.40.0",
+    "@opentelemetry/propagator-b3": "^1.14.0",
+    "@opentelemetry/propagator-jaeger": "^1.14.0",
+    "@opentelemetry/resources": "^1.14.0",
+    "@opentelemetry/sdk-metrics": "^1.14.0",
+    "@opentelemetry/sdk-node": "^0.40.0",
+    "@opentelemetry/sdk-trace-base": "^1.14.0",
+    "@opentelemetry/sdk-trace-node": "^1.14.0",
+    "@opentelemetry/sdk-trace-web": "^1.14.0",
+    "@opentelemetry/semantic-conventions": "^1.14.0",
     "axios": "^1.1.3",
     "cross-env": "^7.0.3",
     "dohjs": "^0.3.2",
@@ -47,13 +64,15 @@
     "node-cache": "^5.1.2",
     "node-dig-dns": "^0.3.0",
     "openai": "^3.1.0",
-    "ping": "^0.4.1"
+    "ping": "^0.4.1",
+    "protobufjs": "^7.2.4"
   },
   "devDependencies": {
     "@types/node": "^15.0.0",
     "@types/tap": "^15.0.0",
     "concurrently": "^6.0.0",
     "fastify-tsconfig": "^1.0.1",
+    "protobufjs-cli": "^1.1.1",
     "tap": "^15.0.9",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
