--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "test": "npm run build:ts && tsc -p test/tsconfig.test.json && cross-env TS_NODE_FILES=true tap --ts test/**/*.test.ts",
     "start": "npm run build:ts && fastify start -l info dist/main.js",
     "predeploy": "npm run build:ts",
-    "production": "cross-env NODE_ENV=production fastify start -l info dist/app.js -p 8080",
+    "production": "cross-env NODE_ENV=production fastify start -l info dist/main.js -p 3006 -a 0.0.0.0",
     "build:ts": "tsc",
     "dev:ts": "tsc -w",
-    "dev:node": "npx dotenv-cli -e .env -- npx nodemon --watch 'dist/**/*.js' --exec 'node dist/main.js'",
+    "dev:node": "npx dotenv-cli -e .env -- npx nodemon --watch 'dist/**/*.js' --exec node dist/main.js",
     "development": "concurrently \"npm:dev:ts\" \"npm:dev:node\"",
-    "devold": "tsc && concurrently -k -p \"[{name}]\" -n \"search.emu.sh\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"fastify start --ignore-watch=.ts$ -p 3006 -w -l info -P dist/app.js\"",
-    "dev": "tsc && concurrently -k \"npm:dev:*\" "
+    "devold": "concurrently -k -p \"[{name}]\" -n \"search.emu.sh\" -c \"yellow.bold,cyan.bold\" \"tsc -w\" \"fastify start -a 0.0.0.0 --ignore-watch=.ts$ -p 3006 --trace-deprecation -w -l info -P dist/app.js\"",
+    "dev": "npx dotenv-cli -e .env -- tsc && concurrently -k \"npm:dev:*\" "
   },
   "keywords": [],
   "author": "",
@@ -29,30 +29,30 @@
     "@fastify/sensible": "^5.1.1",
     "@fastify/static": "^6.5.0",
     "@google-cloud/language": "^4.2.6",
-    "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/auto-instrumentations-node": "^0.38.0",
-    "@opentelemetry/context-async-hooks": "^1.14.0",
-    "@opentelemetry/exporter-collector-grpc": "^0.25.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.40.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.40.0",
-    "@opentelemetry/exporter-prometheus": "^0.40.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^0.40.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.40.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.40.0",
-    "@opentelemetry/instrumentation": "^0.40.0",
-    "@opentelemetry/instrumentation-dns": "^0.32.0",
-    "@opentelemetry/instrumentation-fastify": "^0.32.0",
-    "@opentelemetry/instrumentation-http": "^0.40.0",
-    "@opentelemetry/propagator-b3": "^1.14.0",
-    "@opentelemetry/propagator-jaeger": "^1.14.0",
-    "@opentelemetry/resources": "^1.14.0",
-    "@opentelemetry/sdk-metrics": "^1.14.0",
-    "@opentelemetry/sdk-node": "^0.40.0",
-    "@opentelemetry/sdk-trace-base": "^1.14.0",
-    "@opentelemetry/sdk-trace-node": "^1.14.0",
-    "@opentelemetry/sdk-trace-web": "^1.14.0",
-    "@opentelemetry/semantic-conventions": "^1.14.0",
-    "axios": "^1.1.3",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.55.3",
+    "@opentelemetry/context-async-hooks": "^1.30.1",
+    "@opentelemetry/core": "^1.30.1",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.57.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.57.1",
+    "@opentelemetry/exporter-prometheus": "^0.57.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.57.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.57.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.57.1",
+    "@opentelemetry/instrumentation": "^0.57.1",
+    "@opentelemetry/instrumentation-dns": "^0.43.0",
+    "@opentelemetry/instrumentation-fastify": "^0.44.1",
+    "@opentelemetry/instrumentation-http": "^0.57.1",
+    "@opentelemetry/propagator-b3": "^1.30.1",
+    "@opentelemetry/propagator-jaeger": "^1.30.1",
+    "@opentelemetry/resources": "^1.30.1",
+    "@opentelemetry/sdk-metrics": "^1.30.1",
+    "@opentelemetry/sdk-node": "^0.57.1",
+    "@opentelemetry/sdk-trace-base": "^1.30.1",
+    "@opentelemetry/sdk-trace-node": "^1.30.1",
+    "@opentelemetry/sdk-trace-web": "^1.30.1",
+    "@opentelemetry/semantic-conventions": "^1.28.0",
+    "axios": "^1.7.9",
     "cross-env": "^7.0.3",
     "dohjs": "^0.3.2",
     "fastify": "^4.9.2",
@@ -75,6 +75,6 @@
     "protobufjs-cli": "^1.1.1",
     "tap": "^15.0.9",
     "ts-node": "^10.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "file:"
   }
 }
