--- a/package.json
+++ b/package.json
@@ -75,6 +75,6 @@
     "protobufjs-cli": "^1.1.1",
     "tap": "^15.0.9",
     "ts-node": "^10.0.0",
-    "typescript": "file:"
+    "typescript": "^4.2.4"
   }
 }
