--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,7 @@ services:
     build: .
     image: ghcr.io/askalice/search.emu.sh:latest
     restart: always
-    ports: 3006:3006
+    ports: 
+      - 3006:3006
     env_file:
       - .env
